--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
   <meta property="og:description"
     content="Patronus MarkertPlace | INVIERTE EN JÓVENES PROMESAS DEL DEPORTE Y GANA CON SUS ÉXITOS" />
   <meta property="og:image" itemprop="image"
-    content="https://lh5.googleusercontent.com/nayC_ARlpk_u-V1QFgsby6GQ0jJEsX7ha8JBHBp6ScC2hK_mS1We1coL3cHRbA2LJ2gZ6PsjUrctuLlnKdgLyRo=w16383" />
+    content="%PUBLIC_URL%/assets/logo.png" />
   <!-- Google Webfont -->
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700' rel='stylesheet'
     type='text/css'>
-  <link href="https://teampulse.nl/combine/b3d557484ce8a75249ccc6fd649d8115-1577648780" rel="stylesheet">
+  <link href="%PUBLIC_URL%/assets/style.css" rel="stylesheet">
 </head>
 
 <body class="body">
@@ -27,7 +27,7 @@
       <div class="header__top-container">
         <div class="header__logo" style="position: absolute;">
           <img
-            src="https://lh6.googleusercontent.com/4qC3AjBuW6pQLodL5UjRsFGMgJ81o46l73qvdqdbRtfEpGUGqEbYhGrVJ0Auain9H35KTvLkQiRtcReP2k53AAk=w16383"
+            src="%PUBLIC_URL%/assets/logo.png"
             style="width: 20%;">
         </div>
         <div class="header__nav">
